applications/notylus.com/web/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notylus-com
  name: notylus-com
  namespace: notylus-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notylus-com
  strategy: {}
  template:
    metadata:
      labels:
        app: notylus-com
    spec:
      containers:
      - image: erickmpene/site-2:staging
        name: notylus-com
        ports:
        - containerPort: 8080
        resources: {}
status: {}
